// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabourStatistics render should properly render with surplus or debit 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LabourStatistics
    dayHoursEntitled="8:00"
    dayHoursLaboured="8:00"
    rawBalance="2:20"
    weekHoursEntitled={
      TimeDuration {
        "_minutes": 960,
      }
    }
    weekHoursLaboured={
      TimeDuration {
        "_minutes": 840,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="day-hours"
        >
          <GaugeBar
            currentValue={480}
            referenceValue={480}
            verticalBar={false}
          />
          <span>
            Horas trabalhadas no dia:
            <strong>
              8:00
            </strong>
          </span>
        </div>,
        <div
          className="week-hours"
        >
          <GaugeBar
            currentValue={840}
            referenceValue={960}
            verticalBar={false}
          />
          <span>
            Na semana até esse dia
            <strong>
              devendo 2:00
            </strong>
          </span>
        </div>,
        <div
          className="hour-bank"
        >
          <span>
            Balanço de horas atual:
            <strong>
              0:20
            </strong>
          </span>
        </div>,
      ],
      "className": "gauges",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <GaugeBar
              currentValue={480}
              referenceValue={480}
              verticalBar={false}
            />,
            <span>
              Horas trabalhadas no dia:
              <strong>
                8:00
              </strong>
            </span>,
          ],
          "className": "day-hours",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "currentValue": 480,
              "referenceValue": 480,
              "verticalBar": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Horas trabalhadas no dia:",
                <strong>
                  8:00
                </strong>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Horas trabalhadas no dia:",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "8:00",
                },
                "ref": null,
                "rendered": "8:00",
                "type": "strong",
              },
            ],
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <GaugeBar
              currentValue={840}
              referenceValue={960}
              verticalBar={false}
            />,
            <span>
              Na semana até esse dia
              <strong>
                devendo 2:00
              </strong>
            </span>,
          ],
          "className": "week-hours",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "currentValue": 840,
              "referenceValue": 960,
              "verticalBar": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Na semana até esse dia",
                <strong>
                  devendo 2:00
                </strong>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Na semana até esse dia",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "devendo 2:00",
                },
                "ref": null,
                "rendered": "devendo 2:00",
                "type": "strong",
              },
            ],
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            Balanço de horas atual:
            <strong>
              0:20
            </strong>
          </span>,
          "className": "hour-bank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Balanço de horas atual:",
              <strong>
                0:20
              </strong>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Balanço de horas atual:",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "0:20",
              },
              "ref": null,
              "rendered": "0:20",
              "type": "strong",
            },
          ],
          "type": "span",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="day-hours"
          >
            <GaugeBar
              currentValue={480}
              referenceValue={480}
              verticalBar={false}
            />
            <span>
              Horas trabalhadas no dia:
              <strong>
                8:00
              </strong>
            </span>
          </div>,
          <div
            className="week-hours"
          >
            <GaugeBar
              currentValue={840}
              referenceValue={960}
              verticalBar={false}
            />
            <span>
              Na semana até esse dia
              <strong>
                devendo 2:00
              </strong>
            </span>
          </div>,
          <div
            className="hour-bank"
          >
            <span>
              Balanço de horas atual:
              <strong>
                0:20
              </strong>
            </span>
          </div>,
        ],
        "className": "gauges",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <GaugeBar
                currentValue={480}
                referenceValue={480}
                verticalBar={false}
              />,
              <span>
                Horas trabalhadas no dia:
                <strong>
                  8:00
                </strong>
              </span>,
            ],
            "className": "day-hours",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "currentValue": 480,
                "referenceValue": 480,
                "verticalBar": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Horas trabalhadas no dia:",
                  <strong>
                    8:00
                  </strong>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Horas trabalhadas no dia:",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "8:00",
                  },
                  "ref": null,
                  "rendered": "8:00",
                  "type": "strong",
                },
              ],
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <GaugeBar
                currentValue={840}
                referenceValue={960}
                verticalBar={false}
              />,
              <span>
                Na semana até esse dia
                <strong>
                  devendo 2:00
                </strong>
              </span>,
            ],
            "className": "week-hours",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "currentValue": 840,
                "referenceValue": 960,
                "verticalBar": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Na semana até esse dia",
                  <strong>
                    devendo 2:00
                  </strong>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Na semana até esse dia",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "devendo 2:00",
                  },
                  "ref": null,
                  "rendered": "devendo 2:00",
                  "type": "strong",
                },
              ],
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              Balanço de horas atual:
              <strong>
                0:20
              </strong>
            </span>,
            "className": "hour-bank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Balanço de horas atual:",
                <strong>
                  0:20
                </strong>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Balanço de horas atual:",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "0:20",
                },
                "ref": null,
                "rendered": "0:20",
                "type": "strong",
              },
            ],
            "type": "span",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`LabourStatistics render should properly render with surplus or debit 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LabourStatistics
    dayHoursEntitled="8:00"
    dayHoursLaboured="8:00"
    rawBalance="2:20"
    weekHoursEntitled={
      TimeDuration {
        "_minutes": 960,
      }
    }
    weekHoursLaboured={
      TimeDuration {
        "_minutes": 1000,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="day-hours"
        >
          <GaugeBar
            currentValue={480}
            referenceValue={480}
            verticalBar={false}
          />
          <span>
            Horas trabalhadas no dia:
            <strong>
              8:00
            </strong>
          </span>
        </div>,
        <div
          className="week-hours"
        >
          <GaugeBar
            currentValue={1000}
            referenceValue={960}
            verticalBar={false}
          />
          <span>
            Na semana até esse dia
            <strong>
              0:40 a mais
            </strong>
          </span>
        </div>,
        <div
          className="hour-bank"
        >
          <span>
            Balanço de horas atual:
            <strong>
              3:00
            </strong>
          </span>
        </div>,
      ],
      "className": "gauges",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <GaugeBar
              currentValue={480}
              referenceValue={480}
              verticalBar={false}
            />,
            <span>
              Horas trabalhadas no dia:
              <strong>
                8:00
              </strong>
            </span>,
          ],
          "className": "day-hours",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "currentValue": 480,
              "referenceValue": 480,
              "verticalBar": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Horas trabalhadas no dia:",
                <strong>
                  8:00
                </strong>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Horas trabalhadas no dia:",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "8:00",
                },
                "ref": null,
                "rendered": "8:00",
                "type": "strong",
              },
            ],
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <GaugeBar
              currentValue={1000}
              referenceValue={960}
              verticalBar={false}
            />,
            <span>
              Na semana até esse dia
              <strong>
                0:40 a mais
              </strong>
            </span>,
          ],
          "className": "week-hours",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "currentValue": 1000,
              "referenceValue": 960,
              "verticalBar": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Na semana até esse dia",
                <strong>
                  0:40 a mais
                </strong>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Na semana até esse dia",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "0:40 a mais",
                },
                "ref": null,
                "rendered": "0:40 a mais",
                "type": "strong",
              },
            ],
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            Balanço de horas atual:
            <strong>
              3:00
            </strong>
          </span>,
          "className": "hour-bank",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Balanço de horas atual:",
              <strong>
                3:00
              </strong>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Balanço de horas atual:",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "3:00",
              },
              "ref": null,
              "rendered": "3:00",
              "type": "strong",
            },
          ],
          "type": "span",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="day-hours"
          >
            <GaugeBar
              currentValue={480}
              referenceValue={480}
              verticalBar={false}
            />
            <span>
              Horas trabalhadas no dia:
              <strong>
                8:00
              </strong>
            </span>
          </div>,
          <div
            className="week-hours"
          >
            <GaugeBar
              currentValue={1000}
              referenceValue={960}
              verticalBar={false}
            />
            <span>
              Na semana até esse dia
              <strong>
                0:40 a mais
              </strong>
            </span>
          </div>,
          <div
            className="hour-bank"
          >
            <span>
              Balanço de horas atual:
              <strong>
                3:00
              </strong>
            </span>
          </div>,
        ],
        "className": "gauges",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <GaugeBar
                currentValue={480}
                referenceValue={480}
                verticalBar={false}
              />,
              <span>
                Horas trabalhadas no dia:
                <strong>
                  8:00
                </strong>
              </span>,
            ],
            "className": "day-hours",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "currentValue": 480,
                "referenceValue": 480,
                "verticalBar": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Horas trabalhadas no dia:",
                  <strong>
                    8:00
                  </strong>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Horas trabalhadas no dia:",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "8:00",
                  },
                  "ref": null,
                  "rendered": "8:00",
                  "type": "strong",
                },
              ],
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <GaugeBar
                currentValue={1000}
                referenceValue={960}
                verticalBar={false}
              />,
              <span>
                Na semana até esse dia
                <strong>
                  0:40 a mais
                </strong>
              </span>,
            ],
            "className": "week-hours",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "currentValue": 1000,
                "referenceValue": 960,
                "verticalBar": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Na semana até esse dia",
                  <strong>
                    0:40 a mais
                  </strong>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Na semana até esse dia",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "0:40 a mais",
                  },
                  "ref": null,
                  "rendered": "0:40 a mais",
                  "type": "strong",
                },
              ],
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              Balanço de horas atual:
              <strong>
                3:00
              </strong>
            </span>,
            "className": "hour-bank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Balanço de horas atual:",
                <strong>
                  3:00
                </strong>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Balanço de horas atual:",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "3:00",
                },
                "ref": null,
                "rendered": "3:00",
                "type": "strong",
              },
            ],
            "type": "span",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
